added index.html name

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p>Corporis sed fugiat possimus dolorum nobis esse, dolorem accusantium ducimus unde expedita voluptatibus excepturi cum
   inventore? Aperiam, deleniti. Voluptas, perferendis perspiciatis labore numquam laudantium ipsum veniam nobis illo
   ratione iusto.</p>
+  <h2>Lorem, ipsum.</h2>
 
 <body>
 
