--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<h1>lorem</h1>
+
+<h1 class="text-center">lorem</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore atque perspiciatis placeat provident officiis ipsa
   dolores reiciendis! Mollitia, reiciendis impedit. Hic natus ad ea nisi, amet possimus itaque officiis quia.</p>
 <p>Corporis sed fugiat possimus dolorum nobis esse, dolorem accusantium ducimus unde expedita voluptatibus excepturi cum
   inventore? Aperiam, deleniti. Voluptas, perferendis perspiciatis labore numquam laudantium ipsum veniam nobis illo
   ratione iusto.</p>
-  <hr>
+<hr>
 <h2>Lorem, ipsum.</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores repudiandae officiis magnam incidunt quis, cumque
   eaque! Odio, rem dolor voluptas incidunt architecto magnam minus sed vel. Deleniti dolor earum voluptates.</p>
