--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <h1 class="text-center">lorem</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore atque perspiciatis placeat provident officiis ipsa
+<p>Lorem <span class="text-green">ipsum </span> dolor sit amet consectetur adipisicing elit. Inventore atque perspiciatis placeat provident officiis ipsa
   dolores reiciendis! Mollitia, reiciendis impedit. Hic natus ad ea nisi, amet possimus itaque officiis quia.</p>
 <p>Corporis sed fugiat possimus dolorum nobis esse, dolorem accusantium ducimus unde expedita voluptatibus excepturi cum
   inventore? Aperiam, deleniti. Voluptas, perferendis perspiciatis labore numquam laudantium ipsum veniam nobis illo
